Upda (Notyfy, KeepAlive, Listar, repl, Menu, env+, Server)

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ PORT=8001
 KEY="BAA4TSkey"
 BOT_LIMIT=5
 KEEP_ALIVE=5
+KEEP_ALIVE_MSG="check"
+
+# Si = true / no = false Notificaciones toast
+NOTIFY=no
