--- a/.env
+++ b/.env
@@ -1,8 +1,17 @@
-PORT=8001
+# Puerto en el que corre el servidor
+PORT=8080
+
+# Password para cifrar y desifrar la comunicacion
 KEY="BAA4TSkey"
+
+# Limite de bots que se pueden conectar
 BOT_LIMIT=5
+
+# Intervalos de segundos que se envía un keep alive a un BOT
 KEEP_ALIVE=5
+
+# Mensaje del keep alive
 KEEP_ALIVE_MSG="check"
 
 # Si = true / no = false Notificaciones toast
-NOTIFY=no
+NOTIFY=si
