--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-# Puerto en el que corre el servidor
-PORT=8080
+// Puerto en el que correrá el servidor
+PORT=8001
 
-# Password para cifrar y desifrar la comunicacion
+// Clave que se utilizará para cifrar los mensajes (comandos)
 KEY="BAA4TSkey"
 
-# Limite de bots que se pueden conectar
+// Definición de límites de bots (máximo: 9999)
 BOT_LIMIT=5
 
-# Intervalos de segundos que se envía un keep alive a un BOT
+// Intervalo en segundos para enviar un keep alive a un bot
 KEEP_ALIVE=5
 
-# Mensaje del keep alive
+// Mensaje de keep alive
 KEEP_ALIVE_MSG="check"
 
-# Si = true / no = false Notificaciones toast
-NOTIFY=si
+// Notificaciones toast del servidor (notifica mediante un toast cuando se conecta y desconecta un bot)
+NOTIFY=no
