update (env, menu, relp_bot)

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-// Puerto en el que correrá el servidor
-PORT=8001
+# Puerto en el que corre el servidor
+PORT=8080
 
-// Clave que se utilizará para cifrar los mensajes (comandos)
+# Password para cifrar y desifrar la comunicacion
 KEY="BAA4TSkey"
 
-// Definición de límites de bots (máximo: 9999)
+# Limite de bots que se pueden conectar
 BOT_LIMIT=5
 
-// Intervalo en segundos para enviar un keep alive a un bot
+# Intervalos de segundos que se envía un keep alive a un BOT
 KEEP_ALIVE=5
 
-// Mensaje de keep alive
+# Mensaje del keep alive
 KEEP_ALIVE_MSG="check"
 
-// Notificaciones toast del servidor (notifica mediante un toast cuando se conecta y desconecta un bot)
-NOTIFY=no
+# Si = true / no = false Notificaciones toast
+NOTIFY=si
